Fixed ambiguity for exclude-files for SAST and SCA